fix it\'s open source problem + alignement button when width<467px

--- a/style.css
+++ b/style.css
@@ -87,6 +87,16 @@
   .inline-buttons{
     display: flex;
   }
+
+@media screen and (max-width: 467px){
+  .inline-buttons{
+    flex-direction: column-reverse;
+  }
+  .dark-mode, .download-btn{
+    margin-bottom: 10px;
+  }
+}
+
       /* dark mode */
   .dark-mode{
     display: flex;
